<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView android:background="@drawable/kalk2"
        android:id="@+id/firstNumber"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toStartOf="@id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40sp"
        />



    <TextView android:background="@drawable/kalk2"
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNumber"
        app:layout_constraintTop_toTopOf="@id/firstNumber"
        android:textSize="40sp"/>

    <TableLayout
        android:id="@+id/buttonTable"
        android:layout_width="411dp"
        android:layout_height="635dp"
        android:background="@drawable/kalk2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:backgroundTintMode="add"
                android:onClick="clickNumber"
                android:text="@string/seven"

                android:textSize="20sp" />

            <Button
                android:id="@+id/eight"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/eight"
                android:textSize="20sp" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/nine"
                android:textSize="20sp" />

            <Button
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickEqual"
                android:text="@string/equals"

                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/four"
                android:textSize="20sp" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/five"
                android:textSize="20sp" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/six"
                android:textSize="20sp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="operation"
                android:text="@string/plus"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/one"
                android:textSize="20sp" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/two"
                android:textSize="20sp" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/three"
                android:textSize="20sp" />

            <Button
                android:id="@+id/minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="operation"
                android:text="@string/minus"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickC"
                android:text="@string/C"
                android:textSize="20sp" />

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="clickNumber"
                android:text="@string/zero"
                android:textSize="20sp" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="operation"
                android:text="@string/multiply"
                android:textSize="20sp" />

            <Button
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/kalk"
                android:onClick="operation"
                android:text="@string/divide"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>